apps/base/backrest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backrest
  labels:
    app.kubernetes.io/name: backrest
    app.kubernetes.io/part-of: homelab-apps
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
