apps/base/backrest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backrest
  namespace: backrest
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Backrest
    gethomepage.dev/description: Restic backup UI
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: backrest.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backrest.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: backrest.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backrest
                port:
                  number: 80
